// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Marker should be green 1`] = `
<View
  style={
    Object {
      "backgroundColor": "green",
      "borderRadius": 10,
      "height": 15,
      "width": 15,
    }
  }
/>
`;

exports[`Marker should be red 1`] = `
<View
  style={
    Object {
      "backgroundColor": "red",
      "borderRadius": 10,
      "height": 15,
      "width": 15,
    }
  }
/>
`;
